--- a/app/src/main/res/layout/activity_name_change.xml
+++ b/app/src/main/res/layout/activity_name_change.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <include layout="@layout/topbar_layout"/>
+        <include layout="@layout/topbar_layout" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -21,9 +21,9 @@
             android:id="@+id/name_change_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/boarder"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp">
+            android:layout_marginRight="5dp"
+            android:background="@drawable/boarder">
 
             <TextView
                 android:id="@+id/name_textview"
@@ -44,9 +44,9 @@
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/name_textview"
                 android:layout_toRightOf="@+id/name_textview"
-                android:textColor="@color/base_color_text_black"
                 android:inputType="text"
                 android:maxLength="20"
+                android:textColor="@color/base_color_text_black"
                 android:textColorHint="@color/gray"
                 android:textSize="30px" />
 
@@ -68,8 +68,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:backgroundTint="@color/myPrimaryColor"
-            android:text="确认"
-            android:clickable="true"/>
+            android:clickable="true"
+            android:text="确认" />
 
         <Button
             android:id="@+id/name_cancel_button"
@@ -77,8 +77,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:backgroundTint="@color/myPrimaryColor"
-            android:text="取消"
-            android:clickable="true"/>
+            android:clickable="true"
+            android:text="取消" />
 
     </LinearLayout>
 
