--- a/app/src/main/res/layout/activity_email_change.xml
+++ b/app/src/main/res/layout/activity_email_change.xml
@@ -63,28 +63,28 @@
                 android:textSize="30px" />
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/email_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
+                android:layout_toEndOf="@+id/email_textView"
+                android:layout_toRightOf="@+id/email_textView"
                 android:inputType="text"
                 android:maxLength="20"
                 android:textColor="@color/base_color_text_black"
                 android:textColorHint="@color/gray"
-                android:textSize="30px"
-                android:layout_toRightOf="@+id/email_textView"
-                android:layout_toEndOf="@+id/email_textView" />
+                android:textSize="30px" />
 
             <TextView
                 android:id="@+id/email_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/editText2"
                 android:text=" @bjtu.edu.cn"
                 android:textColor="@color/base_color_text_black"
-                android:textSize="30px"
-                android:layout_below="@+id/editText2"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:textSize="30px" />
 
         </RelativeLayout>
 
