--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -27,7 +27,7 @@
             android:focusable="true">
 
             <xzh.com.materialdesign.view.CircleImageView
-                android:id="@+id/imgAvatar"
+                android:id="@+id/my_image"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_alignParentLeft="true"
@@ -37,7 +37,7 @@
                 android:src="@drawable/avatar" />
 
             <ImageView
-                android:id="@+id/imageView1"
+                android:id="@+id/my_image_change"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentEnd="true"
@@ -58,7 +58,7 @@
             android:focusable="true">
 
             <TextView
-                android:id="@+id/nickname"
+                android:id="@+id/my_nickname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -68,7 +68,7 @@
                 android:textSize="40px" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/my_nickname_change"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentEnd="true"
@@ -89,7 +89,7 @@
             android:focusable="true">
 
             <TextView
-                android:id="@+id/pwd"
+                android:id="@+id/my_pwd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -99,7 +99,7 @@
                 android:textSize="40px" />
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/my_pwd_change"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentEnd="true"
@@ -119,7 +119,7 @@
             android:focusable="true">
 
             <TextView
-                android:id="@+id/sex"
+                android:id="@+id/my_sex"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -129,7 +129,7 @@
                 android:textSize="40px" />
 
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/my_sex_change"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentEnd="true"
@@ -149,7 +149,7 @@
             android:focusable="true">
 
             <TextView
-                android:id="@+id/name"
+                android:id="@+id/my_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -160,7 +160,7 @@
                 android:textSize="40px" />
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/my_name_change"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentEnd="true"
@@ -181,7 +181,7 @@
             android:focusable="true">
 
             <TextView
-                android:id="@+id/age"
+                android:id="@+id/my_age"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -192,7 +192,7 @@
                 android:textSize="40px" />
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/my_age_change"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentEnd="true"
@@ -213,7 +213,7 @@
             android:focusable="true">
 
             <TextView
-                android:id="@+id/school"
+                android:id="@+id/my_school"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -224,7 +224,7 @@
                 android:textSize="40px" />
 
             <ImageView
-                android:id="@+id/imageView7"
+                android:id="@+id/my_school_change"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentEnd="true"
@@ -244,7 +244,7 @@
             android:focusable="true">
 
             <ImageView
-                android:id="@+id/imageView8"
+                android:id="@+id/my_email_change"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentEnd="true"
@@ -253,7 +253,7 @@
                 android:src="@drawable/arrow1" />
 
             <TextView
-                android:id="@+id/email"
+                android:id="@+id/my_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
@@ -275,7 +275,7 @@
             android:focusable="true">
 
             <ImageView
-                android:id="@+id/imageView9"
+                android:id="@+id/my_phone_change"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_alignParentEnd="true"
@@ -284,7 +284,7 @@
                 android:src="@drawable/arrow1" />
 
             <TextView
-                android:id="@+id/phone"
+                android:id="@+id/my_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
