--- a/app/src/main/res/layout/activity_phone_login.xml
+++ b/app/src/main/res/layout/activity_phone_login.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="10dp">
 
         <EditText
-            android:id="@+id/account"
+            android:id="@+id/account_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
