--- a/app/src/main/res/layout/activity_pwd_change.xml
+++ b/app/src/main/res/layout/activity_pwd_change.xml
@@ -36,7 +36,7 @@
                 android:textSize="30px" />
 
             <EditText
-                android:id="@+id/old_pwd_editText2"
+                android:id="@+id/old_pwd_editText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -73,7 +73,7 @@
                 android:textSize="30px" />
 
             <EditText
-                android:id="@+id/new_pwd_editText2"
+                android:id="@+id/new_pwd_editText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -109,7 +109,7 @@
                 android:textSize="30px" />
 
             <EditText
-                android:id="@+id/check_pwd_editText2"
+                android:id="@+id/check_pwd_editText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
