--- a/app/src/main/res/layout/activity_pwd_set.xml
+++ b/app/src/main/res/layout/activity_pwd_set.xml
@@ -36,7 +36,7 @@
                 android:textSize="30px" />
 
             <EditText
-                android:id="@+id/new_pwd_editText1"
+                android:id="@+id/new_pwd_editText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -72,7 +72,7 @@
                 android:textSize="30px" />
 
             <EditText
-                android:id="@+id/check_pwd_editText1"
+                android:id="@+id/check_pwd_editText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
