--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -45,7 +45,7 @@
                         android:textSize="18sp" />
 
                     <TextView
-                        android:id="@+id/condition2"
+                        android:id="@+id/item_state"
                         android:layout_width="110dp"
                         android:layout_height="28dp"
                         android:layout_alignParentRight="true"
@@ -64,13 +64,13 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView13"
+                    android:id="@+id/item_time_bg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/little_time" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/item_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
@@ -80,14 +80,14 @@
                     android:textSize="18sp" />
 
                 <ImageView
-                    android:id="@+id/imageView13"
+                    android:id="@+id/item_money_bg"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:layout_marginLeft="60dp"
                     android:background="@drawable/little_money" />
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/item_money"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -113,13 +113,13 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView13"
+                    android:id="@+id/item_map_bg"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:background="@drawable/little_des" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/item_shop"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -129,14 +129,14 @@
                     android:textSize="18sp" />
 
                 <ImageView
-                    android:id="@+id/imageView15"
+                    android:id="@+id/item_next_bg"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:layout_marginLeft="15dp"
                     android:background="@drawable/little_toward" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/item_des"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
