--- a/app/src/main/res/layout/modify_custom.xml
+++ b/app/src/main/res/layout/modify_custom.xml
@@ -38,7 +38,7 @@
                 android:orientation="vertical">
 
                 <EditText
-                    android:id="@+id/custom_name"
+                    android:id="@+id/modify_custom_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="11dp"
@@ -85,7 +85,7 @@
                 android:orientation="vertical">
 
                 <EditText
-                    android:id="@+id/phone"
+                    android:id="@+id/modify_custom_phone"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="11dp"
@@ -123,7 +123,7 @@
                 android:layout_weight="0.10">
 
                 <EditText
-                    android:id="@+id/shop"
+                    android:id="@+id/modify_enter_validationNum"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -139,7 +139,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/modify_custom"
+                android:id="@+id/modify_validationNum_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
