--- a/app/src/main/res/layout/myorder_item.xml
+++ b/app/src/main/res/layout/myorder_item.xml
@@ -51,7 +51,7 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/condition2"
+                            android:id="@+id/myorder_state"
                             android:layout_width="110dp"
                             android:layout_height="28dp"
                             android:layout_alignParentRight="true"
@@ -70,13 +70,13 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/imageView13"
+                        android:id="@+id/myorder_time_bg"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/little_time" />
 
                     <TextView
-                        android:id="@+id/myorder_date_title"
+                        android:id="@+id/myorder_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -86,14 +86,14 @@
                         android:textSize="18sp" />
 
                     <ImageView
-                        android:id="@+id/imageView13"
+                        android:id="@+id/myorder_money_bg"
                         android:layout_width="32dp"
                         android:layout_height="32dp"
                         android:layout_marginLeft="50dp"
                         android:background="@drawable/little_money" />
 
                     <TextView
-                        android:id="@+id/myorder_date_text"
+                        android:id="@+id/myorder_money"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -125,7 +125,7 @@
                         android:background="@drawable/little_des" />
 
                     <TextView
-                        android:id="@+id/myorder_text"
+                        android:id="@+id/myorder_shop"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -142,7 +142,7 @@
                         android:background="@drawable/little_toward" />
 
                     <TextView
-                        android:id="@+id/myorder_text"
+                        android:id="@+id/myorder_des"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
