--- a/app/src/main/res/layout/order_transport_detail.xml
+++ b/app/src/main/res/layout/order_transport_detail.xml
@@ -30,7 +30,7 @@
                     android:paddingLeft="@dimen/activity_horizontal_margin">
 
                     <xzh.com.materialdesign.view.CircleImageView
-                        android:id="@+id/order_detail_avatar"
+                        android:id="@+id/order_transport_detail_image"
                         android:layout_width="67dp"
                         android:layout_height="73dp"
                         android:src="@drawable/img_user_head" />
@@ -49,7 +49,6 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/condition1"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -58,7 +57,7 @@
                                 android:textSize="18sp" />
 
                             <TextView
-                                android:id="@+id/condition2"
+                                android:id="@+id/order_transport_detail_name"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0.5"
@@ -77,7 +76,6 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/condition1"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -86,7 +84,7 @@
                                 android:textSize="18sp" />
 
                             <TextView
-                                android:id="@+id/condition2"
+                                android:id="@+id/order_transport_detail_nickname"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0.5"
@@ -118,7 +116,6 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/condition1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -127,7 +124,7 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/condition2"
+                            android:id="@+id/order_transport_detail_sum"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.5"
@@ -147,7 +144,6 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/condition1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -156,7 +152,7 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/condition2"
+                            android:id="@+id/order_transport_detail_time"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.5"
@@ -176,7 +172,6 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/condition1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -185,7 +180,7 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/condition2"
+                            android:id="@+id/order_transport_detail_info"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.5"
@@ -203,7 +198,6 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/condition1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -212,7 +206,7 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/condition2"
+                            android:id="@+id/order_transport_detail_money"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.5"
@@ -244,7 +238,6 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/condition1"
                                 android:layout_width="118dp"
                                 android:layout_height="wrap_content"
                                 android:text="物品地点"
@@ -252,7 +245,7 @@
                                 android:textSize="18sp" />
 
                             <TextView
-                                android:id="@+id/condition2"
+                                android:id="@+id/order_transport_detail_shop"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0.5"
@@ -261,6 +254,7 @@
                                 android:textSize="18sp" />
 
                             <ImageView
+                                android:id="@+id/order_transport_detail_shop_map"
                                 android:layout_width="58dp"
                                 android:layout_height="20dp"
                                 android:src="@drawable/chose_map" />
@@ -285,7 +279,6 @@
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/condition1"
                                 android:layout_width="118dp"
                                 android:layout_height="wrap_content"
                                 android:text="配送地点"
@@ -293,7 +286,7 @@
                                 android:textSize="18sp" />
 
                             <TextView
-                                android:id="@+id/condition2"
+                                android:id="@+id/order_transport_detail_des"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0.5"
@@ -302,6 +295,7 @@
                                 android:textSize="18sp" />
 
                             <ImageView
+                                android:id="@+id/order_transport_detail_des_map"
                                 android:layout_width="58dp"
                                 android:layout_height="20dp"
                                 android:src="@drawable/chose_map" />
@@ -325,7 +319,6 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/condition1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -334,7 +327,7 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/condition2"
+                            android:id="@+id/order_transport_detail_state"
                             android:layout_width="110dp"
                             android:layout_height="28dp"
                             android:layout_marginLeft="50dp"
@@ -366,14 +359,14 @@
                     android:weightSum="1">
 
                     <ImageButton
-                        android:id="@+id/img_float_btn"
+                        android:id="@+id/order_transport_detail_phone"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
                         android:background="@drawable/fab_phone_bg"
                         android:src="@drawable/fab_phone" />
 
                     <ImageButton
-                        android:id="@+id/deliver_btn"
+                        android:id="@+id/order_transport_detail_change"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
                         android:layout_marginLeft="200dp"
