--- a/app/src/main/res/layout/receive_order.xml
+++ b/app/src/main/res/layout/receive_order.xml
@@ -53,7 +53,7 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/condition2"
+                            android:id="@+id/receive_state"
                             android:layout_width="110dp"
                             android:layout_height="28dp"
                             android:layout_alignParentRight="true"
@@ -72,13 +72,12 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/imageView13"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/little_time" />
 
                     <TextView
-                        android:id="@+id/receive_date_title"
+                        android:id="@+id/receive_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -88,14 +87,13 @@
                         android:textSize="18sp" />
 
                     <ImageView
-                        android:id="@+id/imageView13"
                         android:layout_width="32dp"
                         android:layout_height="32dp"
                         android:layout_marginLeft="50dp"
                         android:background="@drawable/little_money" />
 
                     <TextView
-                        android:id="@+id/receive_date_text"
+                        android:id="@+id/receive_money"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -127,7 +125,7 @@
                         android:background="@drawable/little_des" />
 
                     <TextView
-                        android:id="@+id/receive_item_text"
+                        android:id="@+id/receive_shop"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -137,14 +135,13 @@
                         android:textSize="18sp" />
 
                     <ImageView
-                        android:id="@+id/imageView15"
                         android:layout_width="32dp"
                         android:layout_height="32dp"
                         android:layout_marginLeft="15dp"
                         android:background="@drawable/little_toward" />
 
                     <TextView
-                        android:id="@+id/myorder_text"
+                        android:id="@+id/receive_des"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
