--- a/app/src/main/res/layout/topbar_layout_order.xml
+++ b/app/src/main/res/layout/topbar_layout_order.xml
@@ -14,15 +14,16 @@
         android:background="@drawable/back_icon" />
 
     <TextView
-        android:id="@+id/nav_title"
+        android:id="@+id/order_nav_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:gravity="center"
         android:text="来份烤肉拌饭"
         android:textColor="@color/base_color_text_black"
         android:textSize="20sp"
-        android:layout_marginBottom="12dp"/>
+        android:layout_alignBottom="@+id/nav_back"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
