--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorAccent">@color/myAccentColor</item>
         <item name="android:textColorPrimary">@color/myTextPrimaryColor</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+        <item name="android:windowAnimationStyle">@style/activityAnimation</item>
 
         <item name="android:windowBackground">@color/myWindowBackground</item>
     </style>
@@ -58,9 +59,20 @@
         <!--设置窗口内容不覆盖-->
         <item name="android:windowContentOverlay">@null</item>
         <!--设置动画，在这里使用让它继承系统的Animation.Dialog-->
-        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+
         <!--背景是否模糊显示-->
         <item name="android:backgroundDimEnabled">true</item>
     </style>
+
+    <!-- animation 样式 -->
+    <style name="activityAnimation" parent="@android:style/Animation">
+        <item name="android:activityOpenEnterAnimation">@anim/slide_right_in</item>
+
+        <item name="android:activityOpenExitAnimation">@anim/slide_left_out</item>
+        <item name="android:activityCloseEnterAnimation">@anim/slide_left_in</item>
+        <item name="android:activityCloseExitAnimation">@anim/slide_right_out</item>
+    </style>
+
+
 
 </resources>
