--- a/app/src/main/res/layout/fragment_navigation_google.xml
+++ b/app/src/main/res/layout/fragment_navigation_google.xml
@@ -85,6 +85,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/textView2"
                 android:layout_alignStart="@+id/textView2"
+                android:textSize="20dp"
                 android:text="♀" />
 
             <TextView
