--- a/app/src/main/res/layout/order_layout.xml
+++ b/app/src/main/res/layout/order_layout.xml
@@ -9,7 +9,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/order_scroll"
-        android:layout_below="@+id/toolbar_orderbar">
+        android:layout_below="@+id/toolbar_orderbar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -230,7 +232,7 @@
                         android:layout_weight="0.78">
 
                         <EditText
-                            android:id="@+id/order_layout_shop"
+                            android:id="@+id/order_layout_des"
                             android:layout_height="match_parent"
                             android:layout_width="match_parent"
                             android:textColorHint="#cdcdcd"
@@ -283,7 +285,7 @@
                         android:layout_weight="0.78">
 
                         <EditText
-                            android:id="@+id/order_layout_des"
+                            android:id="@+id/order_layout_shop"
                             android:layout_height="match_parent"
                             android:layout_width="match_parent"
                             android:textColorHint="#cdcdcd"
@@ -467,7 +469,7 @@
                         android:layout_marginTop="5dp"
                         android:background="@drawable/bg_radiobutton"
                         android:button="@null"
-                         />
+                        android:text="cash" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -483,11 +485,12 @@
                         android:id="@+id/order_layout_choose_score"
                         android:layout_width="32dp"
                         android:layout_height="32dp"
-                        android:layout_marginTop="5dp"
                         android:layout_marginLeft="30dp"
+                        android:layout_marginTop="5dp"
                         android:background="@drawable/bg_radiobutton"
                         android:button="@null"
-                        android:checked="false" />
+                        android:checked="false"
+                        android:text="score" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -559,7 +562,8 @@
         android:gravity="center"
         android:padding="12dp"
         android:layout_alignParentBottom="true"
-        />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <include
         android:id="@+id/toolbar_orderbar"
