--- a/app/src/main/res/layout/order_layout.xml
+++ b/app/src/main/res/layout/order_layout.xml
@@ -159,6 +159,7 @@
                         android:textColorHint="#cdcdcd"
                         android:maxLines="1"
                         android:hint="一句话描述你的需求吧"
+                        android:textColor="@color/base_color_text_black"
                         android:inputType="text"
                         android:layout_marginTop="11dp"
                         android:layout_marginBottom="11dp"
@@ -182,6 +183,7 @@
                         android:layout_height="match_parent"
                         android:layout_width="match_parent"
                         android:textColorHint="#cdcdcd"
+                        android:textColor="@color/base_color_text_black"
                         android:maxLines="3"
                         android:hint="订单详情"
                         android:inputType="text"
@@ -238,6 +240,7 @@
                             android:textColorHint="#cdcdcd"
                             android:maxLines="1"
                             android:hint="选择收货地"
+                            android:textColor="@color/base_color_text_black"
                             android:inputType="text"
                             android:layout_marginTop="11dp"
                             android:layout_marginBottom="11dp"
@@ -291,6 +294,7 @@
                             android:textColorHint="#cdcdcd"
                             android:maxLines="1"
                             android:hint="选择指派地"
+                            android:textColor="@color/base_color_text_black"
                             android:inputType="text"
                             android:layout_marginTop="11dp"
                             android:layout_marginBottom="11dp"
@@ -354,6 +358,7 @@
                             android:layout_marginTop="11dp"
                             android:background="#00000000"
                             android:hint="选择订单持续时间"
+                            android:textColor="@color/base_color_text_black"
                             android:inputType="text"
                             android:maxLines="1"
                             android:textColorHint="#cdcdcd" />
@@ -408,6 +413,7 @@
                             android:layout_marginLeft="16dp"
                             android:layout_marginTop="11dp"
                             android:background="#00000000"
+                            android:textColor="@color/base_color_text_black"
                             android:hint="估计物品金额        "
                             android:inputType="text"
                             android:maxLines="1"
@@ -469,7 +475,7 @@
                         android:layout_marginTop="5dp"
                         android:background="@drawable/bg_radiobutton"
                         android:button="@null"
-                        android:text="cash" />
+                        android:text="2" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -490,7 +496,7 @@
                         android:background="@drawable/bg_radiobutton"
                         android:button="@null"
                         android:checked="false"
-                        android:text="score" />
+                        android:text="1" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -530,8 +536,9 @@
                         android:layout_marginTop="11dp"
                         android:background="#00000000"
                         android:hint="设置数额"
-                        android:inputType="text"
+                        android:inputType="text|number"
                         android:maxLines="1"
+                        android:textColor="@color/base_color_text_black"
                         android:textColorHint="#cdcdcd" />
 
                 </LinearLayout>
